Add support of overriding base class for builders
Now you can use "builder_base" option in model description to override base class
for builder (by default it is the same, as in model)

--- a/templates/header_template.hbs
+++ b/templates/header_template.hbs
@@ -26,7 +26,7 @@
 
 {{/interface}}
 
-@interface {{name}}Builder : {{base_class}}
+@interface {{name}}Builder : {{builder_base_class}}
 
 {{#declare_props props readOnly=false}}
 {{/declare_props}}
