Add support of marking base class of model as immutable
If base class is immutable and must be instantiated with builder,
you can use `base_immutable` option.

--- a/templates/body_template.hbs
+++ b/templates/body_template.hbs
@@ -57,7 +57,8 @@
 
 - (instancetype)initWithBuilder:({{name}}Builder*)builder modelVersion:(int)modelVersion
 {
-    self = [super init];
+    {{#init_with_builder .}}
+    {{/init_with_builder}}
 
     if (self) {
         __modelVersion = modelVersion;
