Add generating interface when base model is immutable

--- a/templates/body_template.hbs
+++ b/templates/body_template.hbs
@@ -6,6 +6,9 @@
 
 {{#models}}
 
+{{#base_immutable_interface .}}
+{{/base_immutable_interface}}
+
 @implementation {{name}} {
     int __modelVersion;
 }
