Update gem version to 0.1.9

--- a/templates/body_template.hbs
+++ b/templates/body_template.hbs
@@ -122,7 +122,7 @@
 
 - (NSString *)description {
     NSMutableString *description = [NSMutableString stringWithFormat:@"<%@: ", NSStringFromClass([self class])];
-    [description appendFormat:@"__modelVersion=%ld", __modelVersion];
+    [description appendFormat:@"__modelVersion=%ld", (long)__modelVersion];
     {{#props}}
     {{#is_ref}}
     [description appendFormat:@", {{name}}=%@", self.{{name}}];
