Adding module imports (#6)
* Add DSL command module_link_to for framework imports
* Remove Mantle dependency from generated classes
* Remove unused mapping functionality
* Update gem version and metadata

--- a/templates/header_template.hbs
+++ b/templates/header_template.hbs
@@ -1,6 +1,8 @@
 #import <Foundation/Foundation.h>
-#import <Mantle/Mantle.h>
-
+{{#module_links}}
+{{#module_import .}}
+{{/module_import}}
+{{/module_links}}
 {{#links}}
 #import "{{.}}.h"
 {{/links}}
