Add gen_equatable option to model template

--- a/templates/header_template.hbs
+++ b/templates/header_template.hbs
@@ -22,8 +22,8 @@
 {{/declare_props}}
 
 
-+ ({{name}}*)create:(void(^)({{name}}Builder *builder))builder;
-- ({{name}}*)mutate:(void(^)({{name}}Builder *builder))builder;
++ (instancetype)create:(void(^)({{name}}Builder *builder))builder;
+- (instancetype)mutate:(void(^)({{name}}Builder *builder))builder;
 
 
 {{/interface}}
