--- a/templates/body_template.hbs
+++ b/templates/body_template.hbs
@@ -13,8 +13,7 @@
     NSInteger __modelVersion;
 }
 
-+ ({{name}}*)create:(void(^)({{name}}Builder *builder))builderBlock
-{
++ (instancetype)create:(void(^)({{name}}Builder *builder))builderBlock {
     {{name}}Builder *builder = [{{name}}Builder new];
     if(builderBlock)
     {
@@ -23,14 +22,12 @@
     return [[self alloc] initWithBuilder:builder modelVersion:1];
 }
 
-- (instancetype)init
-{
+- (instancetype)init {
     {{name}}Builder *builder = [{{name}}Builder new];
     return [[[self class] alloc] initWithBuilder:builder modelVersion:1];
 }
 
-- (instancetype)initWithBuilder:({{name}}Builder*)builder modelVersion:(NSInteger)modelVersion
-{
+- (instancetype)initWithBuilder:({{name}}Builder*)builder modelVersion:(NSInteger)modelVersion {
     {{#init_with_builder .}}
     {{/init_with_builder}}
 
@@ -44,8 +41,7 @@
     return self;
 }
 
-- ({{name}}*)mutate:(void(^)({{name}}Builder *builder))builderBlock
-{
+- (instancetype)mutate:(void(^)({{name}}Builder *builder))builderBlock {
     {{name}}Builder *builder = [{{name}}Builder new];
 
     {{#props}}
@@ -57,6 +53,7 @@
     return [[[self class] alloc] initWithBuilder:builder modelVersion:__modelVersion + 1];
 }
 
+{{#gen_equatable}}
 - (BOOL)isEqual:(id)other {
     if (other == self)
         return YES;
@@ -77,7 +74,7 @@
     {{/props}}
     return YES;
 }
-
+{{/gen_equatable}}
 - (NSUInteger)hash {
     NSUInteger hash = 0;
     {{#props}}
@@ -106,7 +103,7 @@
     return description;
 }
 
-- (id)initWithCoder:(NSCoder *)coder {
+- (instancetype)initWithCoder:(NSCoder *)coder {
     {{#init_with_coder .}}
     {{/init_with_coder}}
     if (self) {
@@ -126,7 +123,7 @@
     [coder encodeInteger:__modelVersion forKey:@"__modelVersion"];
 }
 
-- (id)copyWithZone:(NSZone *)zone {
+- (instancetype)copyWithZone:(NSZone *)zone {
     {{name}} *copy = [[[self class] allocWithZone:zone] init];
 
     if (copy != nil) {
@@ -138,7 +135,6 @@
 
     return copy;
 }
-
 
 @end
 
